2003-09-16  Junichi Uekawa  <dancer@debian.org>

	* tests/param-f-fail.sh: fixed a bug in script.

	* Makefile.am (TESTS): add test.

	* tests/param-F-invalid.sh: create check for param-F-invalid.sh

	* configure.ac (DSHVERSION): 0.24.2.cvs.1

	* dsh.c (execute_rsh_single): check forklimit.
	Declare currentforkcount as "dsh.c" static variable.

	* parameter.c (parse_options): --forklimit and -F
	(print_help): -F
	(parse_options): add sanity checking.

	* dsh.ja.1: document -F

	* dsh.1: document -F

	* dsh.conf.ja.5: update.

	* parameter.c (load_configfile): forklimit

	* dsh.conf.5: document forklimit

	* TODO: update Todo file adding my wishlists.

2003-08-30  Junichi Uekawa  <dancer@debian.org>

	* TODO: update TODO file.

2003-08-26  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.24.2

	* Makefile.am (TESTS): add test

	* tests/test-bufferoverflow.sh (HOME): add check for buffer-overflow which does not exist.

2003-08-05  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.24.0

2003-07-30  Junichi Uekawa  <dancer@debian.org>

	* NEWS: update

	* configure.ac: 0.23.12.cvs.1

	* parameter.c: include netgroup.h conditionally.

	* configure.ac (localedir): check for netgroup.h, which netbsd seems to have, and conditionally include netgroup.h for checking setnetgrent.
	

2003-07-26  Junichi Uekawa  <dancer@debian.org>

	* NEWS: 0.23.12

	* configure.ac: Fix the checking message for libdshconfig.h

2003-07-20  Junichi Uekawa  <dancer@debian.org>

	* NEWS: Add notes that Tru64 UNIX and HP-UX are now supported

	* configure.ac: Include unistd.h for netdb.h checking.
	Tru64 Unix defines setnetgrent in netdb.h, and setnetgrent returns void.
	0.23.11.cvs.2

2003-07-19  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: cvs.1

2003-06-12  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.11
	Improve libdshconfig check. Use AC_COMPILE_IFELSE rather than 
	AC_CHECK_HEDAERS (which only check for system headers)
	